# raycaster_v2

./: .clangd  CMakeLists.txt  README.md
maps/: test.csv  test_cross.csv
src/: logger.cpp  logger.hpp  main.cpp  util.cpp  util.hpp
src/3d/: raycast.hpp  render.cpp  render.hpp
src/entities/: entity.cpp  entity.hpp  player.cpp  player.hpp
src/input/: handler.cpp  handler.hpp
src/map/: csvloader.cpp  csvloader.hpp  loader.cpp  loader.hpp  types.hpp  world.cpp  world.hpp
src/physics/: vector.cpp  vector.hpp
src/renderer/: raycast.cpp  raycast.hpp  render.cpp  render.hpp
